--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
       <a href="#about">Обо мне</a>
       <a href="#contact">Контакты</a>
       <button id="assistant-toggle"><i class="fas fa-robot"></i></button>
+      <button class="mobile-menu-toggle" id="mobile-menu-toggle"><i class="fas fa-bars"></i></button>
     </nav>
   </header>
 
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" id="mobile-menu">
+    <a href="#portfolio">Портфолио</a>
+    <a href="#about">Обо мне</a>
+    <a href="#contact">Контакты</a>
+    <button id="mobile-assistant-toggle"><i class="fas fa-robot"></i> Ассистент</button>
+  </div>
 
-  
   <!-- Hero -->
   <section class="hero">
     <h1 class="glow">Рассказываю о себе</h1>
-    
     <p>Веб-Дизайнер, немного интересуюсь сайтостроением HTML, CSS и JS. Вполне интересная, приятная личность. </p>
     <div class="hero-actions">
       <a href="#portfolio" class="btn primary"><i class="fas fa-laptop-code"></i> Мои проекты</a>
