--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <img src="https://picsum.photos/600/600?random=4" alt="Skelpan" class="about-img">
       <div class="about-text">
         <p>Я настоящий, добрый и умный человек. Люблю видеоигры, разбираюсь в компьютерах и всегда рад обсудить их. В музыке мне нравится  —  "Тринадцать Карат". Со мной легко общаться: могу поддержать разговор на разные темы, поделиться мнением или просто весело провести время.</p>
-        <p> Если хочешь поговорить об играх, музыке, душевных переживаниях или чём-то ещё — давай знакомиться!</p>
+        <p> Если хочешь поговорить об играх, музыке, душевных переживаниях или о чём-то ещё — давай знакомиться!</p>
         <div class="skills">
           <div class="skill"><i class="fas fa-code"></i> Преданность</div>
           <div class="skill"><i class="fas fa-paint-brush"></i> Доброта</div>
@@ -129,11 +129,11 @@
     </form>
     
     <div class="social-links">
-      <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/skelpan" class="social-link"><i class="fab fa-github"></i></a>
       <a href="#" class="social-link"><i class="fab fa-behance"></i></a>
       <a href="#" class="social-link"><i class="fab fa-dribbble"></i></a>
       <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-      <a href="#" class="social-link"><i class="fab fa-telegram-plane"></i></a>
+      <a href="https://t.me/skelpan31" class="social-link"><i class="fab fa-telegram-plane"></i></a>
     </div>
   </section>
 
@@ -166,5 +166,6 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="telegram-sender.js"></script>
 </body>
 </html>
