skelpan_rev_final

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#portfolio">Портфолио</a>
       <a href="#about">Обо мне</a>
       <a href="#contact">Контакты</a>
-      <button id="assistant-toggle"><i class="fas fa-robot"></i></button>
+      <button id="assistant-toggle" class="assistant-btn"><i class="fas fa-robot"></i></button>
       <button class="mobile-menu-toggle" id="mobile-menu-toggle"><i class="fas fa-bars"></i></button>
     </nav>
   </header>
@@ -29,7 +29,7 @@
     <a href="#portfolio">Портфолио</a>
     <a href="#about">Обо мне</a>
     <a href="#contact">Контакты</a>
-    <button id="mobile-assistant-toggle"><i class="fas fa-robot"></i> Ассистент</button>
+    <button id="mobile-assistant-toggle" class="mobile-assistant-btn"><i class="fas fa-robot"></i> Ассистент</button>
   </div>
 
   <!-- Hero -->
@@ -51,7 +51,9 @@
         <div class="card-content">
           <h3>Aniduo</h3>
           <p>Подарок, сделанный владелице студии Aniduo. Потребовалось минимум времени и сбор поздравлений.</p>
-          <p>https://skelpan.github.io/aniduo.io/ </p>
+          <a href="https://skelpan.github.io/aniduo.io/" target="_blank" class="project-link">
+            https://skelpan.github.io/aniduo.io/
+          </a>
           <div class="card-tags">
             <span class="tag">UI/UX</span>
             <span class="tag">React</span>
@@ -64,7 +66,9 @@
         <div class="card-content">
           <h3>Podarok Sistr</h3>
           <p>Поздравление сестры с днем рождения. Пробы новых методов в дизайне. </p>
-         <p>https://skelpan.github.io/podaroksustr.io/ </p>
+          <a href="https://skelpan.github.io/podaroksustr.io/" target="_blank" class="project-link">
+            https://skelpan.github.io/podaroksustr.io/
+          </a>
           <div class="card-tags">
             <span class="tag">Flutter</span>
             <span class="tag">Motion</span>
@@ -73,11 +77,13 @@
         </div>
       </div>
        <div class="card">
-        <img src="" alt="Quantum App" class="card-img">
+        <img src="img/Block.png" alt="Quantum App" class="card-img">
         <div class="card-content">
-          <h3>Здесь что-то будет</h3>
-          <p>Здесь тоже что-то напишу, если будет не лень, а пока это будет просто текст.</p>
-         <p>https:// что-то там тоже буджет </p>
+          <h3>_Mr_Block</h3>
+          <p>Сайт для известного программиста с проекта Cristalix. Применимы новые технологии и желание кодить.</p>
+          <a href="https://skelpan.github.io/_mr_block_portfolio.io/" target="_blank" class="project-link">
+            https://skelpan.github.io/_mr_block_portfolio.io/
+          </a>
           <div class="card-tags">
             <span class="tag">Flutter</span>
             <span class="tag">Motion</span>
@@ -125,7 +131,6 @@
         <textarea id="message" class="form-control" placeholder="Расскажите о вашем проекте..." required></textarea>
       </div>
       <button type="submit" class="btn primary submit-btn"><i class="fas fa-paper-plane"></i> Отправить сообщение</button>
-      <p> Временно недоступно</p>
     </form>
     
     <div class="social-links">
@@ -153,11 +158,24 @@
   <!-- Assistant -->
   <div id="assistant" class="assistant">
     <div class="assistant-header">
-      <span><i class="fas fa-robot"></i> skelpan Assistant</span>
-      <button id="assistant-close" class="assistant-close">✕</button>
+      <span><i class="fas fa-robot"></i> AI Assistant</span>
+      <div class="assistant-controls">
+        <button id="assistant-clear" class="assistant-clear" title="Очистить чат"><i class="fas fa-trash"></i></button>
+        <button id="assistant-close" class="assistant-close">✕</button>
+      </div>
     </div>
     <div class="assistant-body" id="assistant-body">
-      <div class="msg bot">Привет! Я — твой цифровой помощник. Чем могу помочь? К сожалению пока что мои функции ограничены, но я еще учусь, так что в скором времени смогу помочь. 🚀</div>
+      <div class="msg bot">
+        <div class="msg-content">
+          Привет! Я AI-помощник skelpan. 🤖<br>
+          Могу рассказать о проектах, навыках или просто пообщаться!
+        </div>
+        <div class="quick-replies">
+          <button class="quick-reply" data-message="Расскажи о своих проектах">💼 Проекты</button>
+          <button class="quick-reply" data-message="Какие у тебя навыки">🛠 Навыки</button>
+          <button class="quick-reply" data-message="Как с тобой связаться">📞 Контакты</button>
+        </div>
+      </div>
     </div>
     <div class="assistant-input">
       <input type="text" id="assistant-input" placeholder="Напишите ваш вопрос...">
@@ -166,6 +184,7 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="assistant.js"></script>
   <script src="telegram-sender.js"></script>
 </body>
 </html>
