--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="about-content">
       <img src="https://picsum.photos/600/600?random=4" alt="Skelpan" class="about-img">
       <div class="about-text">
-        <p>Я настоящий, добрый и умный человек. Люблю видеоигры, разбираюсь в компьютерах и всегда рад обсудить их. В музыке мне нравится  —  "Тринадцать Карат". Со мной легко общаться: могу поддержать разговор на разные темы, поделиться мнением или просто весело провести время.</p>
+        <p>Я настоящий, добрый и умный человек. Люблю видеоигры, разбираюсь в компьютерах и всегда рад обсудить их. В музыке мне нравятся  —  "Тринадцать Карат", "Три Дня Дождя". Со мной легко общаться: могу поддержать разговор на разные темы, поделиться мнением или просто весело провести время.</p>
         <p> Если хочешь поговорить об играх, музыке, душевных переживаниях или о чём-то ещё — давай знакомиться!</p>
         <div class="skills">
           <div class="skill"><i class="fas fa-code"></i> Преданность</div>
@@ -178,5 +178,6 @@
   <script src="script.js"></script>
   <script src="assistant.js"></script>
   <script src="telegram-sender.js"></script>
+  <script src="visitor-tracker.js"></script>
 </body>
 </html>
