--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="about-content">
       <div class="about-image">
-        <img src="img/три дня дождя ава.png" alt="Skelpan">
+        <img src="img/sklepan дорисовка.jpg" alt="Skelpan">
         <div class="image-overlay"></div>
       </div>
       <div class="about-text">
@@ -144,6 +144,7 @@
           <p>Я настоящий, добрый и умный человек. Люблю видеоигры, разбираюсь в компьютерах и всегда рад обсудить их. В музыке мне нравятся — "Тринадцать Карат", "Три Дня Дождя". Со мной легко общаться: могу поддержать разговор на разные темы, поделиться мнением или просто весело провести время.</p>
           <p>Вдохновляюсь музыкой "Три дня дождя" и "Тринадцать карат" — их глубина и эмоциональность отражаются в моих работах.</p>
         </div>
+
         <div class="about-stats">
           <div class="stat">
             <span class="stat-number">1+</span>
@@ -158,6 +159,7 @@
             <span class="stat-label">Преданности</span>
           </div>
         </div>
+
         <div class="skills">
           <h4>Что я ценю в работе:</h4>
           <div class="skill-grid">
@@ -183,6 +185,7 @@
     </div>
   </section>
 
+  
   <!-- Contact -->
   <section id="contact" class="section contact">
     <div class="section-header">
