--- a/index.html
+++ b/index.html
@@ -283,11 +283,10 @@
 
   <!-- Уведомления -->
   <div id="notification-area"></div>
-
-  <script src="script.js"></script>
-  <script src="assistant.js"></script>
-  <script src="visitor-tracker.js"></script>
-  <script src="portfolio-tracker.js"></script>
-  <script src="telegram-sender.js"></script>
+<link rel="stylesheet" href="/style.css">
+<script src="/script.js"></script>
+<script src="/assistant.js"></script>
+<script src="/visitor-tracker.js"></script>
+<script src="/telegram-sender.js"></script>
 </body>
 </html>
