--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" href="/style.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>skelpan — Портфолио</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Текстура и эффекты -->
@@ -283,9 +283,11 @@
 
   <!-- Уведомления -->
   <div id="notification-area"></div>
-<script src="/script.js"></script>
-<script src="/assistant.js"></script>
-<script src="/visitor-tracker.js"></script>
-<script src="/telegram-sender.js"></script>
+
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
+<script src="assistant.js"></script>
+<script src="visitor-tracker.js"></script>
+<script src="telegram-sender.js"></script>
 </body>
 </html>
